through an ungodly, inhuman effort, I have upgraded gatsby fully

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,7 @@
       ],
       "react/jsx-no-undef": 1,
       "react/jsx-uses-react": 1,
-      "react/jsx-uses-vars": 1
+      "react/jsx-uses-vars": 1,
+      "linebreak-style": "off"
     }
 }
