--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "A minimal, lightweight and mobile-first starter for creating blazing-fast static blogs",
   "main": "n/a",
   "scripts": {
-    "develop": "yarn run clean && gatsby develop",
-    "build": "yarn run clean && gatsby build",
-    "deploy": "yarn run clean && gatsby build --prefix-paths && gh-pages -d public",
+    "develop": "yarn clean && gatsby develop",
+    "build": "yarn clean && gatsby build",
+    "deploy": "yarn clean && gatsby build --prefix-paths && gh-pages -d public",
     "clean": "rimraf .cache public",
     "flow": "flow",
     "lint:js": "eslint --cache --ext .js,.jsx .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
-    "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\" \"yarn flow\"",
+    "lint": "concurrently \"yarn lint:js\" \"yarn lint:scss\" \"yarn flow\"",
     "test": "jest --config ./jest/jest-config.js",
     "test:coverage": "jest --coverage --config ./jest/jest-config.js",
     "test:watch": "jest --watch --config ./jest/jest-config.js"
@@ -38,83 +38,81 @@
     "disqus"
   ],
   "dependencies": {
-    "@sentry/gatsby": "^5.29.0",
-    "@sentry/tracing": "^5.29.0",
+    "@sentry/gatsby": "^6.16.1",
+    "@sentry/tracing": "^6.16.1",
     "bluebird": "^3.7.2",
-    "classnames": "^2.2.6",
-    "codecov": "^3.8.1",
-    "gatsby": "^2.28.2",
-    "gatsby-link": "^2.7.0",
-    "gatsby-plugin-catch-links": "^2.6.0",
-    "gatsby-plugin-feed": "^2.9.0",
-    "gatsby-plugin-flow": "^1.6.0",
-    "gatsby-plugin-google-gtag": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.8.0",
-    "gatsby-plugin-netlify": "^2.7.0",
-    "gatsby-plugin-netlify-cms": "^4.6.0",
-    "gatsby-plugin-offline": "^3.6.0",
-    "gatsby-plugin-optimize-svgs": "^1.0.4",
-    "gatsby-plugin-react-helmet": "^3.6.0",
-    "gatsby-plugin-sass": "^2.7.0",
-    "gatsby-plugin-sharp": "^2.10.1",
-    "gatsby-plugin-sitemap": "^2.8.0",
-    "gatsby-remark-autolink-headers": "^2.7.0",
-    "gatsby-remark-copy-linked-files": "^2.6.0",
+    "classnames": "^2.3.1",
+    "codecov": "^3.8.3",
+    "gatsby": "^4.3.0",
+    "gatsby-link": "^4.3.0",
+    "gatsby-plugin-catch-links": "^4.3.0",
+    "gatsby-plugin-feed": "^4.3.0",
+    "gatsby-plugin-flow": "^3.3.0",
+    "gatsby-plugin-google-gtag": "^4.3.0",
+    "gatsby-plugin-manifest": "^4.3.0",
+    "gatsby-plugin-offline": "^5.3.0",
+    "gatsby-plugin-optimize-svgs": "^1.0.5",
+    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-sass": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-remark-autolink-headers": "^5.3.0",
+    "gatsby-remark-copy-linked-files": "^5.3.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.7.1",
-    "gatsby-remark-katex": "^3.6.0",
-    "gatsby-remark-prismjs": "^3.9.0",
+    "gatsby-remark-images": "^6.3.0",
+    "gatsby-remark-katex": "^6.3.0",
+    "gatsby-remark-prismjs": "^6.3.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^2.7.0",
-    "gatsby-remark-smartypants": "^2.6.0",
-    "gatsby-source-filesystem": "^2.7.0",
-    "gatsby-transformer-remark": "^2.12.0",
-    "gatsby-transformer-sharp": "^2.8.0",
+    "gatsby-remark-responsive-iframe": "^5.3.0",
+    "gatsby-remark-smartypants": "^5.3.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-remark": "^5.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
     "invariant": "^2.2.4",
-    "katex": "^0.12.0",
-    "lodash": "^4.17.20",
-    "netlify-cms-app": "^2.14.5",
-    "node-sass": "^4.14.1",
+    "katex": "^0.13.3",
+    "lodash": "^4.17.21",
+    "node-sass": "^7.0.0",
     "normalize-scss": "^7.0.1",
-    "prismjs": "^1.22.0",
-    "react": "^17.0.1",
+    "prismjs": "^1.25.0",
+    "react": "^17.0.2",
     "react-disqus-comments": "^1.4.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "7.12.7",
-    "@babel/plugin-transform-flow-strip-types": "^7.12.10",
-    "@babel/preset-env": "7.12.10",
-    "@babel/preset-react": "7.12.10",
-    "autoprefixer": "9.8.6",
+    "@babel/core": "7.15.8",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "7.14.5",
+    "@babel/preset-env": "7.15.8",
+    "@babel/preset-flow": "^7.16.0",
+    "@babel/preset-react": "7.14.5",
+    "autoprefixer": "9.8.8",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.6.3",
-    "babel-preset-gatsby": "0.8.0",
-    "browserslist": "^4.18.1",
-    "concurrently": "5.3.0",
-    "eslint": "7.13.0",
+    "babel-preset-gatsby": "^2.3.0",
+    "browserslist": "4.16.8",
+    "concurrently": "6.2.2",
+    "eslint": "7.26.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jest": "24.1.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-jest": "24.3.7",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "7.23.2",
     "eslint-watch": "7.0.0",
-    "flow-bin": "^0.133.0",
-    "flow-typed": "^3.2.1",
-    "gh-pages": "3.1.0",
+    "flow-bin": "^0.167.0",
+    "flow-typed": "^3.5.0",
+    "gh-pages": "3.2.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
     "lost": "8.3.1",
     "postcss-pxtorem": "5.1.1",
-    "react-test-renderer": "17.0.1",
+    "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
-    "stylelint": "13.8.0",
-    "stylelint-config-recommended-scss": "4.2.0",
-    "stylelint-scss": "3.18.0"
+    "sass": "^1.45.0",
+    "stylelint": "^14.1.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-scss": "^4.0.1"
   }
 }
