added some more netlify configuration

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@babel/preset-env": "7.15.8",
     "@babel/preset-flow": "^7.16.0",
     "@babel/preset-react": "7.14.5",
+    "@netlify/plugin-gatsby": "^1.0.3",
     "autoprefixer": "9.8.8",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
@@ -102,6 +103,7 @@
     "eslint-watch": "7.0.0",
     "flow-bin": "^0.167.0",
     "flow-typed": "^3.5.0",
+    "gatsby-plugin-netlify": "^4.0.0-next.0",
     "gh-pages": "3.2.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.3",
