--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "flow-bin": "^0.167.0",
     "flow-typed": "^3.5.0",
     "gatsby-plugin-netlify": "^4.0.0-next.0",
+    "gatsby-plugin-netlify-cms-paths": "^1.3.0",
     "gh-pages": "3.2.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.3",
