--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-remark-autolink-headers": "^5.3.0",
     "gatsby-remark-copy-linked-files": "^5.3.0",
+    "gatsby-remark-embed-video": "^3.1.1",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^6.3.0",
     "gatsby-remark-katex": "^6.3.0",
