--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/kit": "^1.30.4",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"autoprefixer": "^10.4.21",
@@ -27,12 +28,12 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"shiki": "^0.12.1",
-		"svelte": "^3.59.2",
-		"svelte-check": "^2.10.3",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.4.17",
 		"tslib": "^2.8.1",
-		"typescript": "^4.9.5",
-		"vite": "^4.5.14"
+		"typescript": "^5.0.0",
+		"vite": "^5.0.0"
 	},
 	"type": "module"
 }
