--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.1.1",
@@ -20,8 +20,8 @@
 		"mdsvex": "^0.12.6",
 		"parse-numeric-range": "^1.3.0",
 		"postcss": "^8.5.6",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier": "^3.7.3",
+		"prettier-plugin-svelte": "^3.4.0",
 		"shiki": "^0.12.1",
 		"svelte": "^4.2.20",
 		"svelte-check": "^3.8.6",
