--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/vite": "^4.1.17",
 		"autoprefixer": "^10.4.22",
 		"date-fns": "^2.30.0",
 		"mdsvex": "^0.12.6",
 		"parse-numeric-range": "^1.3.0",
-		"postcss": "^8.5.6",
 		"prettier": "^3.7.3",
 		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.7.1",
 		"shiki": "^0.12.1",
 		"svelte": "^5.45.4",
 		"svelte-check": "^4.3.4",
-		"tailwindcss": "^3.4.18",
+		"tailwindcss": "^4.1.17",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.6"
